--- a/kube/member-ingress-tls.yml
+++ b/kube/member-ingress-tls.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: member-ingress
@@ -11,14 +11,19 @@ spec:
   - hosts:
     - memberjs.bchd.cash
     secretName: member-tls
-  backend:
-    serviceName: member
-    servicePort: 97
+  defaultBackend:
+    service:
+      name: member
+      port:
+        number: 97
   rules:
   - host: memberjs.bchd.cash
     http:
       paths:
       - path: /
+        pathType: ImplementationSpecific
         backend:
-          serviceName: member
-          servicePort: 97
+          service:
+            name: member
+            port:
+              number: 97
